customercluster/deployment/policy/customer1-deny-all-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-policy
  namespace: v-customer1
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector: {}
